--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,5 @@
 MONGO_DB_URL = 'mongodb://localhost:27017'
 MONGO_DB = 'swapi'
+CHARACTERS_COLLECTION = 'characters'
+FILMS_COLLECTION = 'films'
 PLANETS_COLLECTION = 'planets'
