films/id/planets route

--- a/Server/.env
+++ b/Server/.env
@@ -3,3 +3,4 @@ MONGO_DB = 'swapi'
 CHARACTERS_COLLECTION = 'characters'
 FILMS_COLLECTION = 'films'
 PLANETS_COLLECTION = 'planets'
+FILMS_PLANETS_COLLECTION ='films_planets'
