Fix merge conflict

--- a/Server/.env
+++ b/Server/.env
@@ -3,4 +3,5 @@ MONGO_DB = 'swapi'
 CHARACTERS_COLLECTION = 'characters'
 FILMS_COLLECTION = 'films'
 PLANETS_COLLECTION = 'planets'
+FILMS_CHARACTERS_COLLECTION = 'films_characters'
 FILMS_PLANETS_COLLECTION ='films_planets'
